fix footer rendering on small res

--- a/DElectronic/DElectonic/src/Components/Footer/Footer.module.css
+++ b/DElectronic/DElectonic/src/Components/Footer/Footer.module.css
@@ -88,7 +88,7 @@
 @media (max-width: 480px) {
 
     .footer { 
-        height: 80vh;
+        height: 130vh;
         margin-top: 0;
         background-color: var(--blue);
         margin-top: 0px;
